--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,10 @@
     		<artifactId>hapi-structures-v281</artifactId>
     		<version>2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-stream</artifactId>
+			<version>2.24.0</version>
+		</dependency>
 	</dependencies>
 </project>
